--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "fast_app_base",
-    "short_name": "fast_app_base",
+    "name": "flutter_toss_clone",
+    "short_name": "flutter_toss_clone",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
